Fix gallery item caption on mobile

--- a/elements/upfront-gallery/css/ugallery.css
+++ b/elements/upfront-gallery/css/ugallery.css
@@ -824,8 +824,8 @@ figure.gallery-labels-figure img.mfp-img {
 		top: auto !important;
 		margin-bottom: 15px !important;
 		margin-right: 15px !important;
+		width: 116px !important;
 	}
-	.ugallery_item,
 	.ugallery_item img {
 		width: 116px !important;
 		height: 116px !important;
@@ -843,7 +843,9 @@ figure.gallery-labels-figure img.mfp-img {
 	}
 }
 @media screen and (max-width: 569px) {
-	.ugallery_item,
+	.ugallery_item {
+		width: 135px !important;
+	}
 	.ugallery_item img {
 		width: 135px !important;
 		height: 135px !important;
@@ -912,7 +914,7 @@ figure.gallery-labels-figure img.mfp-img {
 .mobile-breakpoint .ugallery_item {
 	width: 135px !important;
 	height: auto;
-	display: table;
+	display: block;
 	margin-bottom: 15px;
 }
 
